fix logo margin on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,7 @@ header a:hover {
 @media (max-width: 600px) {
   .logo {
     width: 300px;
+    margin-top: 50px;
   }
 }
 
